--- a/seção-13-html/214-index.html
+++ b/seção-13-html/214-index.html
@@ -21,6 +21,15 @@
         >04 - Lista Aninhada</a
       >
       |
+      <a href nav-link="exercicios/221-link.html">05 - Link</a> |
+      <a href nav-link="exercicios/223-tabela.html">06 - Tabela</a> |
+      <a href nav-link="exercicios/form/225-form.html">07 - Formulário</a> |
+      <a href nav-link="exercicios/228-imagens.html">08 - Imagens</a> |
+      <a href nav-link="exercicios/231-video.html">09 - Vídeo</a> |
+      <a href nav-link="exercicios/233-tag-nao-visuais.html"
+        >10 - Tags Não Visuais</a
+      >
+      |
     </nav>
     <section id="conteudo"></section>
     <footer>Curso de Web Moderno</footer>
