--- a/seção-14-css/index.html
+++ b/seção-14-css/index.html
@@ -71,10 +71,10 @@
           <a href="./239-classeTag.html"
             >Criando Classe <strong>.tag</strong></a
           >
-          <a href="./seletores.html">Seletores</a>
-          <a href="./especificidade1.html">Especificidade CSS #01</a>
-          <a href="./especificidade2.html">Especificidade CSS #02</a>
-          <a href="./heranca.html">Herança</a>
+          <a href="./241-seletores.html">Seletores</a>
+          <a href="./242-especificidade1.html">Especificidade CSS #01</a>
+          <a href="./243-especificidade2.html">Especificidade CSS #02</a>
+          <a href="./244-heranca.html">Herança</a>
           <a href="./box.html">Box Model</a>
           <a href="./margin.html">Margin Collapse</a>
           <a href="./display.html">Display</a>
