--- a/seção-14-css/index.html
+++ b/seção-14-css/index.html
@@ -75,21 +75,21 @@
           <a href="./242-especificidade1.html">Especificidade CSS #01</a>
           <a href="./243-especificidade2.html">Especificidade CSS #02</a>
           <a href="./244-heranca.html">Herança</a>
-          <a href="./box.html">Box Model</a>
-          <a href="./margin.html">Margin Collapse</a>
-          <a href="./display.html">Display</a>
-          <a href="./alturaLargura.html">Altura & Largura</a>
-          <a href="./tamanhoBox.html">Box Sizing</a>
-          <a href="./overflow.html">Overflow</a>
-          <a href="./float.html">Float</a>
+          <a href="./246-box.html">Box Model</a>
+          <a href="./247-margin.html">Margin Collapse</a>
+          <a href="./248-display.html">Display</a>
+          <a href="./250-alturaLargura.html">Altura & Largura</a>
+          <a href="./251-tamanhoBox.html">Box Sizing</a>
+          <a href="./252-overflow.html">Overflow</a>
+          <a href="./253-float.html">Float</a>
         </nav>
         <nav>
-          <a href="./cores.html">Cores</a>
-          <a href="./unidades1.html">Unidades #01</a>
-          <a href="./unidades2.html">Unidades #02</a>
-          <a href="./texto.html">Texto</a>
-          <a href="./position.html">Position</a>
-          <a href="./mediaQuery.html">Media Query</a>
+          <a href="./254-cores.html">Cores</a>
+          <a href="./256-unidades1.html">Unidades #01</a>
+          <a href="./257-unidades2.html">Unidades #02</a>
+          <a href="./258-texto.html">Texto</a>
+          <a href="./259-position.html">Position</a>
+          <a href="./260-mediaQuery.html">Media Query</a>
           <a href="./desafioMenu.html">Desafio Menu</a>
           <a href="./desafioCard.html">Desafio Card</a>
           <a href="./flexbox1.html">Flex Box #1</a>
