--- a/seção-14-css/index.html
+++ b/seção-14-css/index.html
@@ -90,15 +90,15 @@
           <a href="./258-texto.html">Texto</a>
           <a href="./259-position.html">Position</a>
           <a href="./260-mediaQuery.html">Media Query</a>
-          <a href="./desafioMenu.html">Desafio Menu</a>
-          <a href="./desafioCard.html">Desafio Card</a>
-          <a href="./flexbox1.html">Flex Box #1</a>
-          <a href="./flexbox2.html">Flex Box #2</a>
-          <a href="./flexbox3.html">Flex Box #3</a>
-          <a href="./flexboxMenu.html">Desafio Menu (Flex Box)</a>
-          <a href="./cssgrid1.html">CSS Grid #1</a>
-          <a href="./cssgrid2.html">CSS Grid #2</a>
-          <a href="./cssgrid3.html">CSS Grid #3</a>
+          <a href="./261-desafioMenu.html">Desafio Menu</a>
+          <a href="./264-desafioCard.html">Desafio Card</a>
+          <a href="./267-flexbox1.html">Flex Box #1</a>
+          <a href="./268-flexbox2.html">Flex Box #2</a>
+          <a href="./269-flexbox3.html">Flex Box #3</a>
+          <a href="./270-flexboxMenu.html">Desafio Menu (Flex Box)</a>
+          <a href="./272-cssgrid1.html">CSS Grid #1</a>
+          <a href="./274-cssgrid2.html">CSS Grid #2</a>
+          <a href="./275-cssgrid3.html">CSS Grid #3</a>
         </nav>
       </div>
     </div>
