--- a/seção-15-dom/index.html
+++ b/seção-15-dom/index.html
@@ -39,8 +39,12 @@
           <a href="./290-trabalhandoComEventos2.html"
             >Trabalhando c/ Eventos #02</a
           >
-          <a href="./trabalhandoComEventos3.html">Trabalhando c/ Eventos #03</a>
-          <a href="./trabalhandoComEventos4.html">Trabalhando c/ Eventos #04</a>
+          <a href="./291-trabalhandoComEventos3.html"
+            >Trabalhando c/ Eventos #03</a
+          >
+          <a href="./292-trabalhandoComEventos4.html"
+            >Trabalhando c/ Eventos #04</a
+          >
           <a href="./flappy.html">Projeto Flappy Bird</a>
         </nav>
       </div>
