--- a/seção-19-jquery/354-modificandoHTML3.html
+++ b/seção-19-jquery/354-modificandoHTML3.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='UTF-8'>
+  <head>
+    <meta charset="UTF-8" />
     <title>Modificando HTML #03</title>
-    <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
-</head>
+    <link rel="stylesheet" href="css/estilo.css" />
+    <script src="js/jquery.js"></script>
+  </head>
 
-<body class='conteudo exercicio'>
+  <body class="conteudo exercicio">
     <h1>Modificando HTML #03</h1>
-    <div id='conteudo'></div>
+    <div id="conteudo"></div>
 
     <script>
+      $(document).ready(function () {
+        //...
+      });
+
+      // Ou
+
+      $(function () {
         const pessoas = [
-            { nome: 'Ana', nota: 9.1 },
-            { nome: 'Bianca', nota: 8.4 },
-            { nome: 'Carlos', nota: 7.6 },
-            { nome: 'Julia', nota: 9.7 }
-        ]
-        
-        // ...
+          { nome: "Ana", nota: 9.1 },
+          { nome: "Bianca", nota: 8.4 },
+          { nome: "Carlos", nota: 7.6 },
+          { nome: "Julia", nota: 9.7 },
+        ];
+
+        // const table = $("<table>");
+
+        // pessoas.forEach((pessoa) => {
+        //   console.log(pessoa);
+        //   table.append(
+        //     $("<tr>")
+        //       .append($("<td>").append(pessoa.nome))
+        //       .append($("<td>").append(pessoa.nota))
+        //   );
+        // });
+
+        // console.log(table);
+
+        // $("#conteudo").append(table);
+
+        const linhas = pessoas.map((p) => {
+          const tdNome = $("<td>").html(p.nome);
+          const tdNota = $("<td>").html(p.nota);
+          return $("<tr>").append(tdNome, tdNota);
+        });
+
+        const table = $("<table>").append(linhas);
+        $("#conteudo").append(table);
+      });
     </script>
-</body>
+  </body>
+</html>
